Fixed flex on mobile S and M

--- a/css/extra_large.css
+++ b/css/extra_large.css
@@ -33,6 +33,7 @@ li
 {
     height: 765px;
     box-shadow: 0px 0px 10px 5px rgba(237, 237, 237);
+    flex: 1 0 40%;
 }
 
 /* Menu 1 */
