--- a/css/extra_small.css
+++ b/css/extra_small.css
@@ -34,6 +34,7 @@ li
 {
     height: 200px;
     box-shadow: 0px 0px 10px 5px rgba(237, 237, 237);
+    flex: 1 0 90%;
 }
 
 /* Menu 1 */
