--- a/css/large.css
+++ b/css/large.css
@@ -31,6 +31,7 @@ li
 {
     height: 605px;
     box-shadow: 0px 0px 9px 5px rgba(237, 237, 237);
+    flex: 1 0 40%;
 }
 
 /* Menu 1 */
