--- a/css/medium.css
+++ b/css/medium.css
@@ -32,6 +32,7 @@ li
 {
     height: 465px;
     box-shadow: 0px 0px 7px 3px rgba(237, 237, 237);
+    flex: 1 0 40%;
 }
 
 /* Menu 1 */
