--- a/css/small.css
+++ b/css/small.css
@@ -32,6 +32,7 @@ li
 {
     height: 350px;
     box-shadow: 0px 0px 10px 3px rgba(237, 237, 237);
+    flex: 1 0 40%;
 }
 
 /* Menu 1 */
