--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,6 @@ ul
 li
 {
     display: flex;
-    flex: 1 0 40%;
     margin: 5%;
 }
 
